--- a/.verb.md
+++ b/.verb.md
@@ -1,3 +1,29 @@
 # sammler
 
+> sammler (German word for gatherer) is a node.js library to fetch content from several GitHub repositories and save them locally.
+
 **Work in progress: Nothing to show, yet**
+
+---
+## Table of Contents
+<!-- toc -->
+
+---
+
+## About
+{%= docs('about') %}
+
+## FAQ
+
+### GitHub limits
+To overcome the GitHub Api limits create an environment variable called `NODE_SAMMLER_TOKEN`.
+
+## Author
+{%= docs("author") %}
+
+## License
+{%= license() %}
+
+***
+
+{%= include("footer") %}
