--- a/.verb.md
+++ b/.verb.md
@@ -10,8 +10,12 @@
 
 ---
 
-## About
-{%= docs('about') %}
+## Install
+{%= include("install-npm", {save: true}) %}
+
+## Usage
+{%= docs('usage') %}
+
 
 ## FAQ
 
