Coveralls badge + test description.

--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,4 @@
-# sammler
+# sammler {%= badge("coveralls", {repo: "stefanwalther/sammler"}) %}
 
 > sammler (German word for gatherer) is a node.js library to fetch content from several GitHub repositories and save them locally.
 
@@ -21,6 +21,12 @@
 
 ### GitHub limits
 To overcome the GitHub Api limits create an environment variable called `NODE_SAMMLER_TOKEN`.
+
+## Contributing
+
+
+## Tests
+{%= docs("tests") %}
 
 ## Author
 {%= docs("author") %}
