new coveralls-badge

--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,5 @@
-# sammler {%= badge("coveralls", {repo: "stefanwalther/sammler"}) %}
+# sammler
+[![Coveralls](https://img.shields.io/coveralls/stefanwalther/sammler.svg?style=flat-square)]()
 
 > sammler (German word for gatherer) is a node.js library to fetch content from several GitHub repositories and save them locally.
 
