--- a/.verb.md
+++ b/.verb.md
@@ -1,5 +1,5 @@
 # sammler
-[![Coveralls](https://img.shields.io/coveralls/stefanwalther/sammler.svg?style=flat-square)]()
+[![Coveralls](https://img.shields.io/coveralls/stefanwalther/sammler.svg?style=flat-square)](https://coveralls.io/github/stefanwalther/sammler)
 
 > sammler (German word for gatherer) is a node.js library to fetch content from several GitHub repositories and save them locally.
 
