[docs] Add contributing, improve usage.

--- a/.verb.md
+++ b/.verb.md
@@ -23,6 +23,7 @@
 To overcome the GitHub Api limits create an environment variable called `NODE_SAMMLER_TOKEN`.
 
 ## Contributing
+{%= docs("contributing") %}
 
 
 ## Tests
