Change name of token to SAMMLER_GITHUB_TOKEN

--- a/.verb.md
+++ b/.verb.md
@@ -16,7 +16,7 @@
 ## FAQ
 
 ### GitHub limits
-To overcome the GitHub Api limits create an environment variable called `NODE_SAMMLER_TOKEN`.
+To overcome the GitHub Api limits create an environment variable called `SAMMLER_GITHUB_TOKEN`.
 
 ## Contributing
 {%= docs("contributing") %}
